overflow fix

--- a/src/styles/stylesheets/pages/_about.scss
+++ b/src/styles/stylesheets/pages/_about.scss
@@ -1,5 +1,4 @@
 .About {
-  overflow: hidden;
 
   * {
     font-weight: 700;
